# wikiplum

./: .gitignore  .nvim_config.json  2023-10-30-01-40-26.md  2023-10-30-02-13-14.md  LICENSE  api.go  book.toml  foam-file-format.md  getting-started.md  go.mod  readme.md  um.md  wikiplum.go
.github/workflows/: build.yml  cloudflare.yml  pr-preview.yml
content/: index.md
content/misc/: atributos.md  sistema-de-batalha.md
content/personagens/: plum-priestess.md  sunshine.md  unnamed-grand-dad.md
functions/: api.go  go.mod  go.sum  package-lock.json  package.json  wrangler.jsonc
locais/: plum-principality.md
mdbook-infobox/: Cargo.toml
mdbook-infobox/src/: lib.rs  main.rs  preprocessor.rs
misc/: classes.md  regras-de-sucessao.md
personagens/: ariel.md  luna.md  plum-priestess.md  sunshine.md  unnamed-grand-mother.md
pr-preview/pr-21/: index.html
pr-preview/pr-21/locais/: plum-principality.html
pr-preview/pr-21/misc/: atributos.html  classes.html  pet.html  regras-de-sucessao.html  sistema-de-batalha.html
pr-preview/pr-21/personagens/: ariel.html  atlas.html  luna.html  plum-priestess.html  sunshine.html  unnamed-grand-dad.html  unnamed-grand-mother.html
pr-preview/pr-21/static/: style.css
src/: README.md  SUMMARY.md
src/locais/: plum-principality.md
src/misc/: classes.md  sistema-de-batalha.md
src/personagens/: ariel.md  luna.md  plum-priestess.md  sunshine.md
static/: style.css
templates/: base.html  page.html
theme/: index.hbs  infobox.css  pagetoc.js
