[package]
name = "mdbook-infobox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mdbook-infobox"
path = "src/main.rs"

[lib]
name = "mdbook_infobox"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
mdbook = "0.4.35"
pulldown-cmark = "0.9.3"
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
